feat: added AI toggle button in lobby